terminando o ultimo exercício
Finalizando o ultimo exercício do curso JS Patrocinado pelo google do canal curso em vídeo

--- a/JS do Google/DESAFIOS/DESAFIO 5/estilo.css
+++ b/JS do Google/DESAFIOS/DESAFIO 5/estilo.css
@@ -20,7 +20,7 @@ section{
 }
 div{
     padding: 10px;
-    text-align: center;
+    text-align: left;
 }
 
 
@@ -28,4 +28,8 @@ footer{
     padding: 10px;
     text-align: center;
     font: normal 12px arial;
+}
+
+select{
+    width: 150px;
 }
