--- a/CSS/[RocketSeat] CSS para astronautas/Alinhando planetas/Projetos/Footer/style.css
+++ b/CSS/[RocketSeat] CSS para astronautas/Alinhando planetas/Projetos/Footer/style.css
@@ -30,12 +30,12 @@ body{
     margin: 3px;
     border-radius: 50%;}
 
-:root{height:100vh; width:100%}
+:root{min-height:100vh; width:100%}
 
 .main{
     background-color:white;
     width:90vh;
-    height:100vh;
+    height:80vh;
     border-radius:3px
 }
 
@@ -44,7 +44,7 @@ section{
 }
 .box{
     border: 1px solid gray;
-    height:90vh;
+    height:50vh;
     width:50vh;
     margin:10px;
     margin-top:40px;
@@ -57,4 +57,15 @@ section{
 
 #main-content{
     flex:1.3
+}
+footer{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    position: relative;
+    top: 145px;
+    background-color:rgb(187, 187, 187);
+    border-radius: 4px;
+    height:10vh;
+    width:100%;
 }
